fix(canvas): :bug: fix scrollbars appearing on sub-pixel sizes

--- a/yagolands.css
+++ b/yagolands.css
@@ -18,6 +18,7 @@ body {
 body {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 main {
